# matrix_display

./: .gitignore  .gitmodules  README.md  matrix_display  pyproject.toml
examples/: display_time.sh
src/matrix_display/: __init__.py  __main__.py  _vendor.py  cli.py  config.py  led_controller.py  rendering.py
tests/: test_calibration.py  test_cli.py  test_config.py  test_led_controller.py  test_rendering.py
