[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "matrix-display"
version = "0.1.0"
description = "Art-Net controller for a 10x118 LED matrix display"
readme = "README.md"
requires-python = ">=3.12"

[project.scripts]
matrix_display = "matrix_display.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
